[package]
name = "oniondownoda"
version = "0.1.0"
edition = "2021"
description = "🧅 OnionDownOda — A beautiful TUI for downloading files from .onion URLs"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "socks"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
dirs = "6"
tempfile = "3"
webbrowser = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
